@@ -1,5 +1,6 @@
 CHANGES IN VERSION 2.9.3
 ------------------------
+ o update enrichMap to scale category sizes <2016-01-04, Mon>
  o update 'show' methods of enrichResult and gseaResult <2015-12-29, Tue>
  
 CHANGES IN VERSION 2.9.2
